<resources>

    <!-- General stuff -->
    <string name="app_name">Sylon</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="right_arrow">Right arrow</string>
    <string name="vertical_ellipsis">Vertical ellipsis</string>

    <!-- MainActivity -->
    <string name="documents">Documents</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    <!-- DocumentListFragment -->
    <string name="hint_no_documents">You have not created any documents yet.</string>
    <string name="hint_create_document">Click here to create one</string>
    <string name="first_page">First page of the document</string>
    <string name="document_name">Document Name</string>
    <string name="enter_doc_name">Enter name of document</string>
    <string name="change_name">Change name</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="empty_doc_name_msg">Document name cannot be empty.</string>
    <string name="dialog_delete_doc_msg">Are you sure you want to delete this document?</string>
    <string name="dialog_delete_doc_msg_name">Are you sure you want to delete the document \"%s\"?</string>

    <!-- PageListActivity -->
    <string name="hint_no_pages">This document does not contain any pages.</string>
    <string name="hint_create_page">Click here to create one</string>
    <string name="page_image">Image of the page</string>
    <string name="page_number">%d (ID %d)</string>
    <string name="page_number_id_unknown">%d (ID ??)</string>
    <string name="selection_title">%d selected</string>

    <!-- CameraFragment -->
    <string name="permissions_denied">The app needs the permission to use the camera in order to take a picture.</string>
    <string name="snapshot">Take image</string>
    <string name="request_permission_rationale_camera">In order to scan a document, Sylon needs access to your camera. We will only use the camera for the scanning process and nothing else.</string>

    <!-- CameraActivity -->
    <string name="camera_title">Add page to document</string>

    <!-- CropperActivity -->
    <string name="donut">Donut</string>
    <string name="save_crop">Save Crop</string>

</resources>