<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtMessage"
        android:text="@string/request_permission_rationale_camera"
        android:layout_marginBottom="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAccept"
        android:text="@string/accept"
        android:layout_below="@id/txtMessage"
        android:layout_alignParentEnd="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCancel"
        android:text="@string/cancel"
        android:layout_below="@id/txtMessage"
        android:layout_toStartOf="@id/btnAccept"
        android:layout_marginEnd="10dp"/>

</RelativeLayout>