<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/docsRecView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/list_item_docs"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabCustomSize="@dimen/fab_size_default"
        android:id="@+id/btnAdd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_baseline_add_24"
        android:contentDescription="@string/add"/>

    <androidx.constraintlayout.widget.Group
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/groupNoDocuments"
        android:visibility="gone"
        app:constraint_referenced_ids="txtViewNoPages,txtViewClickHere,imgViewRightArrow"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_no_documents"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/txtViewNoPages"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_create_document"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@id/btnAdd"
        app:layout_constraintEnd_toStartOf="@id/imgViewRightArrow"
        app:layout_constraintTop_toTopOf="@id/btnAdd"
        android:id="@+id/txtViewClickHere"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_right_alt_24"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@id/btnAdd"
        app:layout_constraintEnd_toStartOf="@id/btnAdd"
        app:layout_constraintTop_toTopOf="@id/btnAdd"
        android:contentDescription="@string/right_arrow"
        android:id="@+id/imgViewRightArrow"/>

</androidx.constraintlayout.widget.ConstraintLayout>