<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardElevation="5dp"
    app:cardCornerRadius="5dp"
    android:id="@+id/cardViewParent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:id="@+id/imgViewFirstPage"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_launcher_background"
            android:background="@drawable/image_view_border"
            android:contentDescription="@string/first_page"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/imgViewFirstPage"
            android:layout_toStartOf="@id/imgViewMoreOptions"
            android:text="@string/document_name"
            android:textSize="16sp"
            android:id="@+id/txtDocName"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/imgViewMoreOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="-10dp"
            android:layout_marginTop="-10dp"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_more_vert_24"
            android:contentDescription="@string/vertical_ellipsis"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceLarge"/>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>